appId: br.com.foxbit.foxbitandroid
---
- launchApp
- extendedWaitUntil:
    visible: "Entrar"
    timeout: 8000
- tapOn: "Entrar"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Digite seu e-mail"
    timeout: 5000
- tapOn: "Digite seu e-mail"
- inputText: "luiz.barbosa+pf@foxbit.com.br"
- tapOn: "Digite sua senha"
- inputText: "bhp6ezg*ETA5acn*xhr"
- hideKeyboard
- extendedWaitUntil:
    visible: "Entrar"
    timeout: 5000
- tapOn: "Entrar"
- waitForAnimationToEnd