appId: br.com.foxbit.foxbitandroid
---
- launchApp:
    clearState: true
- assertVisible:
    id: "bt_welcome_login"
- tapOn:
    id: "bt_welcome_login"
- assertVisible:
    id: "inp_login_email"
- tapOn:
    id: "inp_login_email"
- inputText: "isaiasilva@gmail.com"
- assertVisible:
    id: "inp_login_password"
- tapOn:
    id: "inp_login_password"
- inputText: "Isaias124"
- assertVisible:
    id: "Voltar"
- tapOn:
    id: "Voltar"
- assertVisible:
    id: "bt_login_continue"
- tapOn:
    id: "bt_login_continue"