appId: br.com.foxbit.foxbitandroid
---
- launchApp:
    clearState: true
- assertVisible:
    id: "txt_welcome_title"
- assertVisible:
    id: "bt_welcome_login"
- tapOn: 
    id: bt_welcome_login
- assertVisible:
    id: "inp_login_email"
- inputText: "Is@i@s1989"
- inputText: "__PENDING_INPUT__"
- assertVisible:
    id: "inp_login_password"
- tapOn:
    id: "inp_login_password"
- inputText: "__PENDING_INPUT__"
- tapOn:
    id: "txt_login_welcome"
- assertVisible:
    id: "bt_login_continue"
- tapOn:
    id: "bt_login_continue"
- assertVisible:
    id: "bt_login_continue"
- tapOn:
    id: "bt_login_continue"