appId: br.com.foxbit.foxbitandroid
---
- assertVisible:
    id: "img_welcome_logo"
- assertVisible:
    id: "img_welcome_logo"
- tapOn:
    id: "img_welcome_logo"
- tapOn:
    point: "700,657"
- assertVisible:
    id: "inp_login_email"
- inputText: "xczfgdf"
- tapOn:
    id: "inp_login_email"
- inputText: "__PENDING_INPUT__"
- inputText: "sdffd"
- assertVisible:
    id: "inp_login_password"
- tapOn:
    id: "inp_login_password"
- inputText: "__PENDING_INPUT__"
- assertVisible:
    id: "inp_login_password"
- assertVisible:
    id: "inp_login_password"
- tapOn:
    id: "inp_login_password"
- inputText: "__PENDING_INPUT__"
- tapOn:
    point: "67,210"