appId: com.google.android.apps.playconsole
---
- launchApp:
- assertVisible: "Pesquisar apps e jogos"
- tapOn: "Pesquisar apps e jogos"
- inputText: "WasteZero"
- assertVisible: "WasteZero | Desperd\u00edcio Zero\nInstalado\n"
- tapOn: "Abrir"