appId: com.miui.calculator
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      id: "com.miui.calculator:id/btn_5_s"
    timeout: 5000
- tapOn:
    id: "com.miui.calculator:id/btn_5_s"
- tapOn:
    id: "com.miui.calculator:id/btn_plus_s"
- tapOn:
    id: "com.miui.calculator:id/btn_2_s"
- tapOn:
    id: "com.miui.calculator:id/btn_equal_s"   # ou similar
- assertVisible: "7"