appId: com.app.wastezero_app
---
- launchApp
- extendedWaitUntil:
    visible: "Busque seu produto"
    timeout: 5000
- tapOn: "Busque seu produto"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "campo de busca"
    timeout: 5000
- tapOn: "busca"
- hideKeyboard
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "aba Produtos aparecer nos resultados"
    timeout: 5000
- tapOn: "aba Produtos"
- waitForAnimationToEnd
- assertVisible: "houve resultado e feijao"