appId: br.com.foxbit.foxbitandroid
---
- launchApp
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Entrar"
    timeout: 10000
- tapOn: "Entrar"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Digite sua senha"
    timeout: 10000
- tapOn: "Digite seu e-mail"
- tapOn: "senha usando hint real confirmado no XML"
- hideKeyboard
- assertVisible:
    text: "Entrar"
- tapOn: "Entrar"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "modal de biometria"
    timeout: 10000
- tapOn: "opcao NAO no modal de biometria"
- waitForAnimationToEnd